only /route endpoint and enable via config.yml